# Battleship

./: .gitlab-ci.yml  README.md  flake.nix
battleship/: CMakeLists.txt  battleship.pro  kabumm.cpp  kabumm.h  main.cpp  state.cpp  state.h
battleship/logic/: game.cpp  game.hpp
battleship/net/: kinds.cpp  kinds.h  message.cpp  message.h  network.cpp  network.h
battleship/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  zustand.h
battleship/ui/GUI/: Img_file.qrc
battleship/ui/GUI/Img_file/: button_palette.xml
docs/: .gitignore  Doxyfile
server/: CMakeLists.txt  server.pro
server/source/: connection.cpp  connection.h  kabumm_server.cpp  kabumm_server.h  main.cpp
server/source/message/: concepts.h  kinds.h  message.h
